tdf#111908: only freopen if we try to use another console

Change-Id: If513faa4aac03b4c41759445e34cc965ece0b48e
Reviewed-on: https://gerrit.libreoffice.org/41378
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>